# opp2025

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr.yml
scripts/: create_env.sh  download_competition_data.sh  download_dataset.sh  ensemble.py  run_notebook.sh  setting_jupyterlab.sh  train_gnn.py  train_lgb.py
src/: dataset-metadata.json
src/data/: __init__.py  add_descriptors.py  add_external_data.py  augument_gmm.py  canonical.py  compute_graph_features.py  count_atoms.py  generate_random_smiles.py  generate_trimer.py  load_data.py
src/model/: __init__.py  get_model.py  gnn.py  train_lgb.py
src/model/torch_molecule/predictor/gnn/: model.py  modeling_gnn.py
src/model/torch_molecule/utils/graph/: features.py  graph_from_smiles.py
src/utils/: __init__.py  cap_star.py  extract_main_chain.py  get_useless_col.py  scaffold.py  score.py  upload_kaggle_dataset.py
submit_notebook/: submit.ipynb  submit_exp024.ipynb  submit_exp029.ipynb
train_notebook/: exp040.ipynb  exp041.ipynb  exp042.ipynb  exp043.ipynb  exp044.ipynb  exp045.ipynb  exp046.ipynb  exp047.ipynb  exp048.ipynb  exp049.ipynb  exp050.ipynb  exp051.ipynb  exp052.ipynb  exp053.ipynb  exp054.ipynb  exp055.ipynb
